add `np` and `pl` module references

--- a/Primary Current Distribution Demo.ipynb
+++ b/Primary Current Distribution Demo.ipynb
@@ -63,9 +63,9 @@
     "    \n",
     "    b, h= 0.5, AR\n",
     "    mod=h/b\n",
-    "    qz=exp(-pi*mod)\n",
+    "    qz=np.exp(-np.pi*mod)\n",
     "    mz=mp.mfrom(q=qz)\n",
-    "    kz=sqrt(mz)\n",
+    "    kz=np.sqrt(mz)\n",
     "\n",
     "    Kz=mp.ellipk(mz)\n",
     "    Bz=b/Kz\n",
@@ -85,19 +85,19 @@
     "    at, bt, ct, dt = vtz\n",
     "    Dv = (ct - at) / (ct - bt) / ((dt - at) / (dt - bt))\n",
     "    mw = (mp.sqrt(Dv) - mp.sqrt(Dv - 1))**4\n",
-    "    kw = sqrt(real(mw))\n",
+    "    kw = np.sqrt(np.real(mw))\n",
     "    qw = mp.qfrom(m=mw)\n",
-    "    Bw = -mp.log(qw)/pi\n",
+    "    Bw = -mp.log(qw)/np.pi\n",
     "\n",
-    "    resistance= 2.0/float(real(Bw))  # = 2*Kw/Kpw\n",
+    "    resistance= 2.0/float(np.real(Bw))  # = 2*Kw/Kpw\n",
     "\n",
     "    tw = np.array([-1/kw, -1, 1, 1/kw])\n",
     "    wtnew = ellipjV(tw,mw)\n",
     "    wt=mp_to_complex(wtnew)\n",
     "    \n",
     "    # Linear fractional transformation\n",
-    "    t0 = sort(real(mp_to_complex(vtz)))\n",
-    "    t1 = sort(real(mp_to_complex(tw)))\n",
+    "    t0 = np.sort(np.real(mp_to_complex(vtz)))\n",
+    "    t1 = np.sort(np.real(mp_to_complex(tw)))\n",
     "\n",
     "    delta = 1.0\n",
     "    ttrans= lambda a,t: (a[0]*t + a[1]) / (a[2]*t + delta)\n",
@@ -106,16 +106,16 @@
     "    alpha, beta, gamma=fsolve(zerofun,[1,1,0],xtol=1.0e-12)\n",
     "    \n",
     "    # w-space grid\n",
-    "    Kw = real(np.cdouble(mp.ellipk(mw)))\n",
-    "    Kpw = real(np.cdouble(mp.ellipk(1 - mw)))\n",
+    "    Kw = np.real(np.cdouble(mp.ellipk(mw)))\n",
+    "    Kpw = np.real(np.cdouble(mp.ellipk(1 - mw)))\n",
     "\n",
-    "    x=linspace(-Kw, Kw, lines)\n",
-    "    y=linspace(0, Kpw, 101)\n",
+    "    x=np.linspace(-Kw, Kw, lines)\n",
+    "    y=np.linspace(0, Kpw, 101)\n",
     "    phix, phiy = np.meshgrid(x, y)\n",
     "    phiw= phix + phiy*1j\n",
     "\n",
-    "    x=linspace(-Kw, Kw, 101)\n",
-    "    y=linspace(0, Kpw, lines)\n",
+    "    x=np.linspace(-Kw, Kw, 101)\n",
+    "    y=np.linspace(0, Kpw, lines)\n",
     "    dphix, dphiy = np.meshgrid(x, y)\n",
     "    dphiw= dphix.T + dphiy.T*1j\n",
     "\n",
@@ -132,23 +132,23 @@
     "    dphiz= w_to_z(dphiw)\n",
     "    \n",
     "    # Plot\n",
-    "    compT= lambda z: (imag(z), real(z))\n",
+    "    compT= lambda z: (np.imag(z), np.real(z))\n",
     "\n",
     "    rect = patches.Rectangle((0,-b),h,2*b,linewidth=1,edgecolor='k',facecolor='none')\n",
     "\n",
-    "    plot(*compT(vz[:2]),'r',linewidth=2)\n",
-    "    plot(*compT(vz[2:]),'b',linewidth=2)\n",
-    "    plot(*compT(phiz), color='gray', linewidth=0.5);\n",
-    "    plot(*compT(dphiz), color='gray', linewidth=0.5, linestyle='dashed')\n",
-    "    gca().add_patch(rect)\n",
+    "    pl.plot(*compT(vz[:2]),'r',linewidth=2)\n",
+    "    pl.plot(*compT(vz[2:]),'b',linewidth=2)\n",
+    "    pl.plot(*compT(phiz), color='gray', linewidth=0.5);\n",
+    "    pl.plot(*compT(dphiz), color='gray', linewidth=0.5, linestyle='dashed')\n",
+    "    pl.gca().add_patch(rect)\n",
     "\n",
-    "    axis('equal')\n",
-    "    axis('off')\n",
+    "    pl.axis('equal')\n",
+    "    pl.axis('off')\n",
     "\n",
     "    rstring='$R/R_0 = $ {0:5.3f}'.format(resistance)\n",
-    "    text( 0.5, 1.05, rstring,fontsize=10)\n",
+    "    pl.text( 0.5, 1.05, rstring,fontsize=10)\n",
     "\n",
-    "    show()"
+    "    pl.show()"
    ]
   },
   {
@@ -159,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "357bb0f73c314417b0ad7530c88e2f6e",
+       "model_id": "8aee5ffaa6064fe8a2fd48e0cdc8cf3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,6 +174,13 @@
    "source": [
     "interact(primary_rect, AR=[1/3, 1/2, 1, 2, 3], wr=[0.1, 0.2, 1/3, 0.5, 1], lines=[5,10,15,20]);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
